# BMP_SHIT

./: CMakeLists.txt  Constants.h  RGB.cpp  RGB.h  WinLib.cpp  WinLib.h  main.cpp
src/: splash_forward.hpp  splash_utils.cpp  splash_utils.hpp
src/2D/: bstree.cpp  bstree.hpp  circle.cpp  circle.hpp  convex2D.cpp  convex2D.hpp  dcel.cpp  dcel.hpp  ellipse.cpp  ellipse.hpp  event.cpp  event.hpp  line2D.cpp  line2D.hpp  point2D.cpp  point2D.hpp  polygon.cpp  polygon.hpp  ray2D.cpp  ray2D.hpp  rectangle.cpp  rectangle.hpp  segment2D.cpp  segment2D.hpp  shape2D.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp  vector2D.cpp  vector2D.hpp  voronoi2D.cpp  voronoi2D.hpp
src/2D/Triangulation/: DelaunayTriangulationBuilder.cpp  DelaunayTriangulationBuilder.hpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  vertex.hpp
src/3D/: cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  ellipsoid.cpp  ellipsoid.hpp  line3D.cpp  line3D.hpp  plane.cpp  plane.hpp  point3D.cpp  point3D.hpp  ray3D.cpp  ray3D.hpp  segment3D.cpp  segment3D.hpp  shape3D.hpp  sphere.cpp  sphere.hpp  vector3D.cpp  vector3D.hpp
